# argws-ponto-manager

./: .env.example  CHANGELOG.md  README.md  index.html  package.json  release.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: build-desktop.yml  release.yml
docs/: TECHNICAL_DOCUMENTATION.md  continuidade_splash_cartao_apuracao.md  entrega_final_complementar.md  fase_fechamento_operacional.md  implantacao_mercado_fase1.md  implantacao_mercado_fase3.md  implantacao_mercado_fase4.md
scripts/ci/: check-version-sync.mjs  validate-pr-title.mjs
scripts/release/: prepare-release.mjs  run-semantic-release.mjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/feriados/: feriados_2026_bundle.json
src-tauri/src/: app_state.rs  db.rs  lib.rs  main.rs  migrations.rs  models.rs  security.rs  timecalc.rs
src-tauri/src/commands/: access.rs  afd.rs  app.rs  auth.rs  banco_horas.rs  companies.rs  conector.rs  employees.rs  entities.rs  feriados.rs  holiday_sources.rs  jornadas.rs  licensing.rs  punches.rs  rep.rs  reports.rs  support.rs  sync.rs  treatments.rs
src-tauri/src/services/: conector_client.rs  mod.rs
src/components/: AppSplash.vue
src/config/: entities.ts
src/layouts/: AppLayout.vue
src/pages/: AboutPage.vue  AfdImportPage.vue  AppLogsPage.vue  ApuracaoPage.vue  BancoHorasPage.vue  CartaoPontoPage.vue  ConectorDashboardPage.vue  ConectorSettingsPage.vue  DashboardPage.vue  EmpresaPage.vue  EntityPage.vue  FechamentoMensalPage.vue  FeriadoPage.vue  FuncionarioPage.vue  GeneratedReportsPage.vue  JornadaPage.vue  LicensingPage.vue  LoginPage.vue  (+12 more)
(+8 files in other folders)
