[package]
name = "pontos_desktop_tauri"
version = "0.3.0"
description = "Pontos Desktop em Rust + Tauri"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "pontos_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
argon2 = "0.5"
rand = "0.8"

sha2 = "0.10"

base64 = "0.22"
